--- a/FileShare/Views/Shared/_Layout.cshtml
+++ b/FileShare/Views/Shared/_Layout.cshtml
@@ -73,6 +73,10 @@
     <link rel="stylesheet" type="text/css" href="~/lib/jquery-bootgrid/jquery.bootgrid.min.css" />
     <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="~/css/glyphicons.css" />
+
+    <link href="https://cdn.jsdelivr.net/npm/uppy@2.13.3/dist/uppy.min.css" type="text/css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/files.photo.gallery@0.7.0/css/files.css" rel="stylesheet">
+
     <link rel="stylesheet" href="~/css/site.css" />
 
     <!--[if lt IE 9]>
@@ -170,6 +174,28 @@
     <script src="~/lib/moment/moment.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.26/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/yall-js@3.2.0/dist/yall.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/filesize@9.0.11/lib/filesize.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/screenfull@5.2.0/dist/screenfull.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.5/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.5/plugin/localizedFormat.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.5/plugin/relativeTime.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.65.6/mode/meta.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/files.photo.gallery@0.7.0/js/files.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mousetrap@1.6.5/mousetrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/headroom.js@0.12.0/dist/headroom.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.5/locale/pt-br.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uppy@2.13.3/dist/uppy.min.js"></script>
+
+    @*<script src="https://cdn.jsdelivr.net/npm/@exeba/list.js@2.3.1/dist/list.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@uppy/locales@2.1.1/dist/pt_BR.min.js"></script>*@
+
+
     @RenderSection("Scripts", required: false)
 
     <script>
