Fix Google analytics

--- a/FileShare/Views/Shared/_Layout.cshtml
+++ b/FileShare/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23515540-6"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LY8KK87F1W"></script>
     <!-- Google Tag Manager -->
     <script>
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -200,9 +200,9 @@
 
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'UA-23515540-6');
+        gtag('config', 'G-LY8KK87F1W');
     </script>
 </body>
 </html>
